--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,15 +1,13 @@
 <%=form_for  @recipe  do |t|%>
 <%=t.label :name %>
 <%=t.text_field :name %>
-<%= collection_check_boxes(:ingredints, :ingredients_ids, Ingredient.all, :id, :name) do |b| %>
-    <li>
-      <%= b.check_box %>
-      <%= b.label %>
-    </li>
-<% end %>
-<%= t.fields_for :ingredints, @recipe.ingredients.build do |categories_fields| %>
-    <%= categories_fields.text_field :name %>
-  <% end %>
+
+  <div class="field">
+
+   <%= t.label :ingredients, 'Ingredients:' %><br>
+   <%= t.collection_check_boxes :ingredient_ids, @ingredients, :id, :name %>
+   
+     </div>
 
 <%=t.submit%>
 <%end%>
